--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.18.0",
     "buefy": "^0.7.0",
     "cache-polyfill": "^1.0.1",
+    "font-awesome": "^4.7.0",
     "register-service-worker": "^1.0.0",
     "vue": "^2.5.17",
     "vue-fixed-header": "^2.0.2",
