--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vue-moment": "^4.0.0",
     "vue-mouse-parallax": "^0.9.2",
     "vue-router": "^3.0.1",
+    "vuebar": "0.0.20",
     "vuesax": "^3.4.6"
   },
   "devDependencies": {
